--- a/TCC/estilo/encomendas.css
+++ b/TCC/estilo/encomendas.css
@@ -4,3 +4,83 @@ h2 {
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+*  .conteudo{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Georgia', serif;
+}
+.conteudo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f3f2ef;
+    color: #333;
+    padding: 20px
+}
+
+/* Container principal */
+.container {
+    display: block;
+    max-width: 900px;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 20px;
+}
+
+/* Seções dos produtos */
+.product-section {
+    display: flex;
+    padding: 40px;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.product-section img {
+    width: 300px;
+    height: auto;
+    margin-right: 30px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.product-section h2 {
+    font-size: 1.8em;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.product-section p {
+    font-size: 1.1em;
+    color: #666;
+    line-height: 1.5;
+    margin: 5px 0;
+}
+
+.price {
+    font-size: 1.6em;
+    color: #444;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+/* Rodapé das observações */
+.footer {
+    background-color: #f9f9f9;
+    padding: 30px 40px;
+}
+
+.footer h2 {
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.footer p {
+    font-size: 1em;
+    color: #555;
+    line-height: 1.6;
+}
