--- a/style/index.css
+++ b/style/index.css
@@ -157,44 +157,70 @@
 
 /* Imagens */
 
-.content-img{
+
+.content-cards{
     margin-top: 20px;
+    background-color: black;
     display: flex;
     flex-wrap: wrap;
-    gap: 5rem;
-    background-color: black;
-    width: 100%;
-    padding: 20px;
     justify-content: center;
-}
-
-.content-img .container {
-    align-items: center;
-    max-width: 400px;
-}
-
-.content-img .container .imgs {
     width: 100%;
+    min-height: 450px;
     height: auto;
-    margin: 10px;
-    gap: 15px;
-    border: 15px solid white;
-    border-radius: 10px;
-    transition: 1s;
-    justify-content: space-between;
-    object-fit: cover;
-    position: relative;
-
-    &:hover{
-        border-bottom: 100px solid white;
-        margin-top: -10px;
+    padding: 40px;
+    gap: 100px;
     }
-}
-
-/* Responsivo */
-@media (max-width:600px){
-    .imgs{
-        max-width: 90%;
-        margin: 10px auto;
+    
+     .card{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        position: relative;
+        height: 300px;
+        width: 250px;
+        background-color: white;
+        box-shadow: 0px 35px 80px rgba(0, 0, 0, 0.15);
+        transition: 0.5s;
+        border-radius: 20px;
     }
-}
+    .card:hover{
+        height: 350px;
+    }
+    
+     .card .card-image{
+        position: absolute;
+        width: 150px;
+        height: auto;
+        transition: 0.5s;
+    }
+    
+    .card:hover .card-image{
+        top: -100px;
+        scale: 0.75;
+    }
+    
+    .card .card-image img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 0.5s;
+    }
+    
+    .card .text{
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 220px;
+        gap: 18px;
+        width: 100%;
+        padding: 0 30px;
+        text-align: center;
+        height: 30px;
+        overflow: hidden;
+        transition: 0.5s;
+    }
+    
+    .card:hover .text{
+        top: 120px;
+        height: 200px;
+    }
