--- a/style/sobre-nos.css
+++ b/style/sobre-nos.css
@@ -27,6 +27,7 @@ h2 {
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
     align-items: center;
     justify-content: center;
+    opacity: 0.8;
     
 }
 
