--- a/style/sobre-nos.css
+++ b/style/sobre-nos.css
@@ -22,7 +22,7 @@ h2 {
   /* Transparência e layout da seção de conteúdo */
   .content {
     background-color: black; /* Fundo preto com transparência */
-    padding: 170px;
+    padding: 5% 10%;
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
     align-items: center;
@@ -34,13 +34,7 @@ h2 {
 /* Estilo de título e texto */
 
 p {
-    font-size: 1.9em;
+    font-size:  clamp(1rem, 5vw, 2.5rem);
     color: #dcdcdc;
     text-align: center; 
-}
-
-@media screen and (max-width:590px) {
-    .content{
-        padding: 50px;
-    }
 }
