--- a/style/sobre-nos.css
+++ b/style/sobre-nos.css
@@ -21,7 +21,7 @@ h2 {
 
   /* Transparência e layout da seção de conteúdo */
   .content {
-    background-color: black; /* Fundo preto com transparência */
+    background-color: black; 
     padding: 5% 10%;
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
