--- a/style/sobre-nos.css
+++ b/style/sobre-nos.css
@@ -11,7 +11,7 @@ h2 {
 }
 /* Imagem de Fudo  */
 .fundo{
-    background-image: url(../img/fundo.jpg);
+    background-image: url(../img/sobrenos/fundo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     align-items: center;
@@ -22,7 +22,7 @@ h2 {
   /* Transparência e layout da seção de conteúdo */
   .content {
     background-color: black; 
-    padding: 5% 10%;
+    padding: 5%;
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
     align-items: center;
