--- a/style/header.css
+++ b/style/header.css
@@ -123,7 +123,7 @@ header a{
         height: 0;
         top: 12px;
         right: 0;
-        background-color: aliceblue;
+        background-color: white;
         transition: .6s;
         z-index: 1000;
         visibility: hidden;
