--- a/style/galeria.css
+++ b/style/galeria.css
@@ -1,5 +1,28 @@
-/* Cabeçalho */
-@import url(header.css);
+h2 {
 
-/* Sobre Nós */
+        font-size: 40px;
+        text-align: center;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
+.imagens {
+
+    align-items: center;
+    justify-items: center;
+    margin-left: 150px;
+    margin-bottom: 150px;
+    width: 450px;
+    height: 450px;
+    border-top: 8px solid black;
+    border-bottom: 8px solid black;
+    border-right: 8px solid black;
+    border-left: 8px solid black;
+
+}
+
+.conteudo {
+
+    background-color: #f3f2ef;
+    color: #333;
+    padding: 20px
+}
