--- a/style/header.css
+++ b/style/header.css
@@ -101,7 +101,7 @@ header a{
     transition: .5s;
     justify-content: space-between;
 
-    &:hover{
+    &:hover,.open{
         color: white;
         background-color: black;
         border-radius: 20%;
