--- a/style/index.css
+++ b/style/index.css
@@ -176,8 +176,8 @@
         flex-wrap: wrap;
         justify-content: center;
         position: relative;
-        height: 300px;
-        width: 250px;
+        height: 350px;
+        width: 300px;
         background-color: white;
         box-shadow: 0px 35px 80px rgba(0, 0, 0, 0.15);
         transition: 0.5s;
@@ -188,6 +188,7 @@
     }
     
      .card .card-image{
+        margin-top: 20px;
         position: absolute;
         width: auto;
         height: auto;
