--- a/style/header.css
+++ b/style/header.css
@@ -109,11 +109,11 @@ header a{
     }
 }
 
-.open{
+.topo.open{
     color: white;
-        background-color: black;
-        border-radius: 20%;
-        transform: scale(1000rem);
+    background-color: black;
+    border-radius: 20%;
+    transform: scale(1000rem);
 }
 
 /* Navegação Mobile */
