--- a/style/galeria.css
+++ b/style/galeria.css
@@ -16,8 +16,10 @@ h2 {
     justify-items: center;
     margin-left: 150px;
     margin-bottom: 150px;
-    width: 450px;
-    height: 450px;
+    max-width: 450px;
+    max-height: 450px;
+    width: auto;
+    height: auto;
     border-top: 8px solid black;
     border-bottom: 8px solid black;
     border-right: 8px solid black;
