--- a/style/galeria.css
+++ b/style/galeria.css
@@ -24,11 +24,11 @@ h2 {
     border-bottom: 8px solid black;
     border-right: 8px solid black;
     border-left: 8px solid black;
-
 }
 
 .conteudo {
-
+    align-items: center;
+    justify-content: center;
     background-color: #f3f2ef;
     color: #333;
     padding: 20px
