--- a/style/galeria.css
+++ b/style/galeria.css
@@ -24,6 +24,7 @@ h2 {
     border-bottom: 8px solid black;
     border-right: 8px solid black;
     border-left: 8px solid black;
+    object-fit: cover;
 }
 
 .conteudo {
