--- a/style/header.css
+++ b/style/header.css
@@ -124,7 +124,7 @@ header a{
 
 @media (max-width:400px){
     .cima{
-        display: block;
+        display: inline-block;
         position: absolute;
         width: 100%;
         height: 0;
