--- a/style/galeria.css
+++ b/style/galeria.css
@@ -12,6 +12,8 @@ h2 {
 .imagens {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     margin-left: 150px;
     margin-bottom: 150px;
     max-width: 450px;
