--- a/style/header.css
+++ b/style/header.css
@@ -82,6 +82,7 @@ header a{
     justify-content: center;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+    background-color: white;
 }
 
 .cima{
