--- a/style/header.css
+++ b/style/header.css
@@ -71,6 +71,7 @@ header a{
     object-fit: cover;
     z-index: 100;
     position: absolute;
+    background-color: white;
     }
 }
 /* Navegação */
