--- a/style/header.css
+++ b/style/header.css
@@ -141,7 +141,7 @@ header a{
         text-align: center;
     }
     nav.active .cima{
-        display: block;
+        display: inline-block;
         height: 100px;
         visibility: visible;
     }
