--- a/style/header.css
+++ b/style/header.css
@@ -98,7 +98,7 @@ header a{
     color: black;
     text-decoration: none;
     font-size: 1.5rem;
-    display: flex;
+    display: inline-flex;
     transition: .5s;
     justify-content: space-between;
 
