--- a/style/emcomendas.css
+++ b/style/emcomendas.css
@@ -64,6 +64,25 @@ h2 {
     margin-top: 15px;
 }
 
+button{
+    background-color: #444;
+    display: flex;
+    padding: 3%;
+    border-radius: 5px;
+    box-shadow: -2px 3px 0 #161616, -3px 4px 0 #000;
+    font-size: clamp(8px, 5vw, 1rem);
+}
+button:hover{
+    box-shadow: inset -4px 4px 0 #222;
+}
+button a{
+    list-style-type: none;
+    text-decoration: none;
+    color:white;
+    text-align: center;
+    align-items: center;
+}
+
 /* Rodapé das observações */
 .footer {
     background-color: #f9f9f9;
